<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        app:srcCompat="@drawable/logoname"
        />

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:fontFamily="@font/bangers"
        android:text="@string/welcome"
        android:textColor="#1A1A1A"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/tvWelcomeGreetings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/bangers"
        android:text="@string/what_should_we_call_you_learn_it_buddy"
        android:textColor="#808080"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:background="@drawable/roundsquare"
        android:fontFamily="@font/bangers"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
    android:textSize="16sp" />

    <Button
        android:id="@+id/startBtn"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="#D97806"
        android:fontFamily="@font/bangers"
        android:text="@string/start"
        android:textColor="@color/white"
        android:textSize="16sp"
        tools:ignore="TextSizeCheck" />

</LinearLayout>